Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Easywarehouse by CreDevLabz</title>
+    <title>Easy Warehouse by CreDevLabz</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Easywarehouse</h1>
+        <h1>Easy Warehouse</h1>
         <h2>Easy Warehousing module for Magento</h2>
         <a href="https://github.com/CreDevLabz/EasyWarehouse" class="button"><small>View project on</small> GitHub</a>
       </div>
@@ -31,7 +31,18 @@
           <h1>
 <a id="easy-warehouse" class="anchor" href="#easy-warehouse" aria-hidden="true"><span class="octicon octicon-link"></span></a>Easy Warehouse</h1>
 
-<p>Easy warehouse is Magento extension which can be used to define separate inventory for every store view.</p>
+<p>Easy warehouse is Magento extension which can be used to define separate inventory for every store view. This module overwrites the existing inventory module.</p>
+
+<h2>
+<a id="open-source" class="anchor" href="#open-source" aria-hidden="true"><span class="octicon octicon-link"></span></a>Open Source</h2>
+
+<h2>
+<a id="technical-support-available" class="anchor" href="#technical-support-available" aria-hidden="true"><span class="octicon octicon-link"></span></a>Technical Support Available</h2>
+
+<h3>
+<a id="feel-free-to-ask" class="anchor" href="#feel-free-to-ask" aria-hidden="true"><span class="octicon octicon-link"></span></a>Feel free to ask.</h3>
+
+<p>Feel free to connect or raise issue. </p>
         </section>
 
         <aside id="sidebar">
