--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
           <h1>
 <a id="easy-warehouse" class="anchor" href="#easy-warehouse" aria-hidden="true"><span class="octicon octicon-link"></span></a>Easy Warehouse</h1>
 
-<p>Easy warehouse is Magento extension which can be used to define separate inventory for every store view. This module overwrites the existing inventory module.</p>
-
+<p>Easy warehouse is Magento extension which can be used to define separate inventory for every store view. This module overwrites the existing inventory module and saves separate inventory details for each store view for every website defined. This module can help in creating multi store Magento based projects where separate inventory is a challenge. This module uses standard magneto flow and indexing and can handle heavy catalog with separate qty value for each store.</p>
 <h2>
 <a id="open-source" class="anchor" href="#open-source" aria-hidden="true"><span class="octicon octicon-link"></span></a>Open Source</h2>
 
